align fixed

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,13 +1,14 @@
 .card {
   width: 200px;
-  border: 1px solid rgb(236, 223, 223);
+  border: 1px solid #f3f3f3;
+  border-radius: 5px;
   padding: 19px;
-  display: flex;
+  box-sizing: border-box;
   flex-direction: column;
-  align-items: flex-start;
+  display: flex;
 
   &__image {
-    margin-top: 33px;
+    margin-top: 14px;
     width: 160px;
     height: 134px;
   }
@@ -16,6 +17,7 @@
     font-size: 12px;
     margin-top: 40px;
     font-weight: 500;
+    color: #060b35;
   }
 
   &__code {
@@ -70,6 +72,8 @@
   &--buy {
     font-weight: 700;
     font-size: 14px;
+    text-transform: uppercase;
+    align-content: center;
     color: white;
     background-color: var(--button-color);
     border: none;
@@ -77,6 +81,7 @@
     width: 100%;
     height: 40px;
     cursor: pointer;
+    text-decoration: none;
 
     &:hover {
       border: 1px solid var(--button-color);
